--- a/stable_edit/synth_data/Reddit_Api.ipynb
+++ b/stable_edit/synth_data/Reddit_Api.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "\n",
     "client_auth = requests.auth.HTTPBasicAuth('AlFmsJweahucqYg4PwnQhQ', 'TiGAXDkqpxFKi9OYqTJiodHMGVt3Ew')\n",
-    "post_data = {\"grant_type\": \"password\", \"username\": \"RedditorInCh1ef\", \"password\": \"Redd1tPassw0rd\"}\n",
+    "post_data = {\"grant_type\": \"password\", \"username\": \"RedditorInCh1ef\", \"password\": {passwordhere}}\n",
     "headers = {\"User-Agent\": \"ChangeMeClient/0.1 by RedditorInCh1ef\"}\n",
     "response = requests.post(\"https://www.reddit.com/api/v1/access_token\", auth=client_auth, data=post_data, headers=headers)\n",
     "auth_response = response.json()\n",
